# TripCostPro

./: .gitignore  Dockerfile  Outline.md  README.md  dashboard.css  download_raw_data.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
code/: entsoe_download.py
data/: electricity_2024_2025.csv  electricity_2024_2025_2026.csv  electricity_2024_2025_start_2026.csv  fuel_prices_2024.csv  fuel_prices_2025.csv  fuel_prices_2025_with_normal.csv  fuel_prices_2026_full_year.csv  fuel_prices_2026_until_now.html
documentation/: TechnicalDocumentation_TripCostPro_Tosun_Scherndl.docx
notebooks/: electricity_prices.ipynb  fuel_prices.ipynb
src/dashboarding/: main.py
src/dashboarding/models/: CarColumns.py  Commodity.py  Globals.py  SideBarContent.py  TabNames.py  TripCalculatorColumns.py
src/dashboarding/scripts/: download_raw_data.py
src/dashboarding/services/: create_cars.py  create_dashboard.py  create_overview.py  create_prices.py  create_trip_calculator.py  load_data.py
