[project]
name = "dashboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "entsoe-py>=0.8.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "plotly>=6.7.0",
    "streamlit>=1.56.0",
]
[build-system]
requires = ["uv_build>=0.10.9,<=0.11.2"]
build-backend = "uv_build"